* New product types: Goods, Assets and Service
* Category is no more required on product

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-26
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-09
* Bug fixes (see mercurial logs for details)
* Improve computation precision of UOM convertion

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release